third_party/move/move-compiler-v2/tests/checking/naming/other_builtins_invalid.exp

Diagnostics:
error: expected 1 type argument but 2 were provided
  ┌─ tests/checking/naming/other_builtins_invalid.move:3:9
  │
3 │         freeze<u64, bool>(x);
  │         ^^^^^^^^^^^^^^^^^^^^

error: expected 1 type argument but 0 were provided
  ┌─ tests/checking/naming/other_builtins_invalid.move:4:9
  │
4 │         freeze<>(x);
  │         ^^^^^^^^^^^

error: assert macro must have two arguments
  ┌─ tests/checking/naming/other_builtins_invalid.move:5:16
  │
5 │         assert!();
  │                ^^

error: assert macro must have two arguments
  ┌─ tests/checking/naming/other_builtins_invalid.move:6:16
  │
6 │         assert!(false);
  │                ^^^^^^^

error: assert macro must have two arguments
  ┌─ tests/checking/naming/other_builtins_invalid.move:7:16
  │
7 │         assert!(0 != 1);
  │                ^^^^^^^^
